Fix mobile grid gap

--- a/webpack/stylesheets/_layout.scss
+++ b/webpack/stylesheets/_layout.scss
@@ -23,8 +23,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr;
-  @include size-lock(grid-row-gap, 20px, 30px);
-  @include size-lock(grid-column-gap, 30px, 40px);
+  grid-gap: 10px;
 
   grid-template-areas:
                       "header"
@@ -34,6 +33,8 @@ h1, h2, h3, h4, h5, h6 {
                       "footer";
 
   @media (min-width: 576px) {
+    @include size-lock(grid-row-gap, 20px, 30px);
+    @include size-lock(grid-column-gap, 30px, 40px);
     grid-template-columns: 1fr 3fr;
     grid-template-areas:
                         "header  page-title"
